YT-18062: RichYPathParser implementation